# fah-xchem-visualizer

./: .gitignore  fah-xchem-viz.cabal  shell.nix
app/: Main.hs
src/FahXChem/: CompoundSeriesAnalysis.hs  Loader.hs  Server.hs
